--- a/views/_header.pug
+++ b/views/_header.pug
@@ -6,7 +6,7 @@ header.header
     nav.nav.nav--user
         if user
             a.nav__el.nav__el--logout Log out
-            a.nav__el(href='/chat') 
+            a.nav__el(href='/') 
                 img.nav__user-img(src=`/img/default.jpg`, alt=`/img/default.jpg`)
                 span= user.name.split(' ')[0]
         else
