Fixed minor issues

--- a/views/chat.pug
+++ b/views/chat.pug
@@ -33,5 +33,16 @@ html
             .container
               .content
           script.
-            script(src='/socket.io/socket.io.js')
-            script(src='/js/bundle.js')
+            const socket = io();
+            $('form').submit(function() {
+              const name = $('#name').val();
+              const message = $('#message').val();
+
+              socket.emit('chatter', `${name} : ${message}`);
+              $('#message').val('');
+              return false; 
+            });
+
+            socket.on('chatter', function(message) {
+              $('#chat-messages').append($('<li>').text(message));
+            });
