--- a/views/chat.pug
+++ b/views/chat.pug
@@ -36,13 +36,13 @@ html
             const socket = io();
             $('form').submit(function() {
               const name = $('#name').val();
-              const message = $('#message').val();
+              const msg = $('#msg').val();
 
-              socket.emit('chatter', `${name} : ${message}`);
-              $('#message').val('');
+              socket.emit('message', `${name} : ${msg}`);
+              $('#msg').val('');
               return false; 
             });
 
-            socket.on('chatter', function(message) {
+            socket.on('Load chat messages', function(message) {
               $('#chat-messages').append($('<li>').text(message));
             });
