--- a/views/chat.pug
+++ b/views/chat.pug
@@ -5,14 +5,14 @@ html(lang='en')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css' integrity='sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=' crossorigin='anonymous')
     link(rel='stylesheet' href='css/chat.css')
-    title Social Media Chat API
+    title Social Media App
   body
     .chat-container
       header.chat-header
         h1
           i.fas.fa-smile
           |  Social Media Chat
-        a.btn(href='/') Leave Chat
+        a.btn(href='/') Leave Room
       main.chat-main
         .chat-sidebar
           h3
