Completed Chat API, minor fixes left in frontend

--- a/views/chat.pug
+++ b/views/chat.pug
@@ -5,20 +5,20 @@ html(lang='en')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css' integrity='sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=' crossorigin='anonymous')
     link(rel='stylesheet' href='css/chat.css')
-    title Social Media App
+    title Social Media API
   body
     .chat-container
       header.chat-header
         h1
           i.fas.fa-smile
-          |  Social Media Chat
+          |  Chat API
         a.btn(href='/') Leave Room
       main.chat-main
         .chat-sidebar
           h3
             i.fas.fa-users
             |  Users
-          ul#users
+          ul#users= `${user.name}`
         .chat-messages
       .chat-form-container
         form#chat-form
@@ -27,5 +27,6 @@ html(lang='en')
             i.fas.fa-paper-plane
             |  Send
     script(src='https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js' integrity='sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4=' crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js')
     script(src='/socket.io/socket.io.js')
-    script(src='js/main.js')
+    script(src='js/socket-client.js')
